--- a/rentalcompany/src/main/resources/database.properties
+++ b/rentalcompany/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 #===============================================================#
 #================== Database configuration ====================#
 #===============================================================#
-db.url=jdbc:mysql://52.59.193.212:3306/?user=root
-db.driver=org.postgresql.Driver
-db.user=root
-db.pass=devintern
+url=jdbc:mysql://52.59.193.212:3306/keith_denysiuk?user=root
+database.driver=org.postgresql.Driver
+user=root
+pass=devintern
