--- a/rentalcompany/pom.xml
+++ b/rentalcompany/pom.xml
@@ -84,6 +84,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.9</version>
+    </dependency>
+
   </dependencies>
 
   <build>
