--- a/rentalcompany/src/main/resources/database.properties
+++ b/rentalcompany/src/main/resources/database.properties
@@ -2,6 +2,6 @@
 #================== Database configuration ====================#
 #===============================================================#
 url=jdbc:mysql://52.59.193.212:3306/keith_denysiuk?user=root
-database.driver=org.postgresql.Driver
+database.driver.class=com.mysql.cj.jdbc.Driver
 user=root
 pass=devintern
